Alterado para utilizar flutter_modular
Os apps são módulos filhos em branches separadas e o host é o MainModule.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,135 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+.dart_tool/flutter_build/3c33712b330d7f10bc2c279fab308d91/
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/.filecache
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/_composite.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/android_aot_bundle_profile_android-arm.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/android_aot_bundle_profile_android-arm64.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/android_aot_profile_android-arm.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/android_aot_profile_android-arm64.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/aot_android_asset_bundle.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/app.dill
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/flutter_assets.d
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/gen_localizations.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/kernel_snapshot.d
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/kernel_snapshot.stamp
+.dart_tool/flutter_build/5d4787f1b5e728d82d32dbd26d9da302/outputs.json
+.dart_tool/flutter_build/6f51b0329159b904a9653fd62a07bbfd/
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/.filecache
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/_composite.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/android_aot_bundle_release_android-arm.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/android_aot_bundle_release_android-arm64.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/android_aot_release_android-arm.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/android_aot_release_android-arm64.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/aot_android_asset_bundle.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/app.dill
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/flutter_assets.d
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/gen_localizations.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/kernel_snapshot.d
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/kernel_snapshot.stamp
+.dart_tool/flutter_build/e227bff1d9f8311b499809d39dfebc61/outputs.json
+.dart_tool/package_config.json
+app1.iml
+build/app/generated/
+build/app/intermediates/annotation_processor_list/
+build/app/intermediates/blame/
+build/app/intermediates/bundle_manifest/
+build/app/intermediates/compatible_screen_manifest/
+build/app/intermediates/data_binding_layout_info_type_merge/
+build/app/intermediates/dex/
+build/app/intermediates/dex_archive_input_jar_hashes/
+build/app/intermediates/duplicate_classes_check/
+build/app/intermediates/external_file_lib_dex_archives/
+build/app/intermediates/external_libs_dex/
+build/app/intermediates/external_libs_dex_archive/
+build/app/intermediates/flutter/debug/.last_build_id
+build/app/intermediates/flutter/debug/flutter_assets/
+build/app/intermediates/flutter/debug/flutter_build.d
+build/app/intermediates/flutter/profile/.last_build_id
+build/app/intermediates/flutter/profile/flutter_assets/
+build/app/intermediates/flutter/profile/flutter_build.d
+build/app/intermediates/flutter/release/.last_build_id
+build/app/intermediates/flutter/release/flutter_assets/
+build/app/intermediates/flutter/release/flutter_build.d
+build/app/intermediates/incremental/
+build/app/intermediates/instant_app_manifest/
+build/app/intermediates/lint_jar/
+build/app/intermediates/manifest_merge_blame_file/
+build/app/intermediates/merged_assets/
+build/app/intermediates/merged_jni_libs/
+build/app/intermediates/merged_manifests/
+build/app/intermediates/merged_shaders/
+build/app/intermediates/metadata_feature_manifest/
+build/app/intermediates/metadata_library_dependencies_report/
+build/app/intermediates/mixed_scope_dex_archive/
+build/app/intermediates/navigation_json/
+build/app/intermediates/processed_res/
+build/app/intermediates/project_dex_archive/debug/out/com/
+build/app/intermediates/project_dex_archive/debug/out/io/
+build/app/intermediates/project_dex_archive/profile/out/com/
+build/app/intermediates/project_dex_archive/profile/out/io/
+build/app/intermediates/project_dex_archive/release/out/com/
+build/app/intermediates/project_dex_archive/release/out/io/
+build/app/intermediates/res/
+build/app/intermediates/runtime_symbol_list/
+build/app/intermediates/sdk_dependency_data/
+build/app/intermediates/sub_project_dex_archive/
+build/app/intermediates/symbol_list_with_package_name/
+build/app/intermediates/validate_signing_config/
+build/app/kotlin/
+build/app/outputs/
+build/app/reports/
+build/app/tmp/compileDebugJavaWithJavac/
+build/app/tmp/compileProfileJavaWithJavac/
+build/app/tmp/compileReleaseJavaWithJavac/
+build/app/tmp/kotlin-classes/debug/META-INF/
+build/app/tmp/kotlin-classes/profile/META-INF/
+build/app/tmp/kotlin-classes/release/META-INF/
+build/app/tmp/packLibsflutterBuildDebug/
+build/app/tmp/packLibsflutterBuildProfile/
+build/app/tmp/packLibsflutterBuildRelease/
+build/cache.dill.track.dill
+build/eb38c95a12354bb5fd8e15290c3e5c7f/
+build/intermediates/
+build/ios/
+build/kotlin/
+build/package_info/.transforms/
+build/package_info/generated/
+build/package_info/intermediates/aapt_friendly_merged_manifests/
+build/package_info/intermediates/aar_libs_directory/
+build/package_info/intermediates/annotation_processor_list/
+build/package_info/intermediates/annotations_typedef_file/
+build/package_info/intermediates/annotations_zip/
+build/package_info/intermediates/blame/
+build/package_info/intermediates/compile_symbol_list/
+build/package_info/intermediates/compiled_local_resources/
+build/package_info/intermediates/data_binding_layout_info_type_merge/
+build/package_info/intermediates/data_binding_layout_info_type_package/
+build/package_info/intermediates/generated_proguard_file/
+build/package_info/intermediates/incremental/
+build/package_info/intermediates/library_and_local_jars_jni/
+build/package_info/intermediates/library_assets/
+build/package_info/intermediates/library_jni/
+build/package_info/intermediates/library_manifest/
+build/package_info/intermediates/lint_jar/
+build/package_info/intermediates/lint_publish_jar/
+build/package_info/intermediates/local_only_symbol_list/
+build/package_info/intermediates/manifest_merge_blame_file/
+build/package_info/intermediates/merged_consumer_proguard_file/
+build/package_info/intermediates/merged_jni_libs/
+build/package_info/intermediates/merged_manifests/
+build/package_info/intermediates/merged_native_libs/
+build/package_info/intermediates/merged_shaders/
+build/package
+_info/intermediates/navigation_json/
+build/package_info/intermediates/packaged_res/
+build/package_info/intermediates/public_res/
+build/package_info/intermediates/res/
+build/package_info/intermediates/symbol_list_with_package_name/
+build/package_info/outputs/
+build/package_info/reports/
+build/package_info/tmp/
+gen/
+ios/Flutter/.last_build_id
+pubspec.lock
