--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,21 @@ dependencies:
   package_info: '>=0.4.3 <2.0.0'
   yaml: ^2.2.1
   provider: ^4.3.2+1
+  flutter_modular: ^2.0.0+1
 
 #  app1:
 #    git:
 #      url: git@github.com:glaubersp-flutter/app1.git
 #      ref: master
-  app1:
+
+#  app1:
+#    path: ../app1
+
+  convex_app_bar_example:
     path: ../app1
+#    git:
+#      url: git@github.com:glaubersp-flutter/app1.git
+#      ref: external_app
 
 #  app2:
 #    git:
