--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,10 @@ dependencies:
 #    path: ../app1
 
   convex_app_bar_example:
-    path: ../app1
-#    git:
-#      url: git@github.com:glaubersp-flutter/app1.git
-#      ref: external_app
+#    path: ../app1
+    git:
+      url: git@github.com:glaubersp-flutter/app1.git
+      ref: external_app
 
 #  app2:
 #    git:
