--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
+
+  package_info: ^2.0.0
+  flutter_modular: ^3.2.1
+  yaml: ^3.1.0
+
+#  convex_app_bar_example:
+#    path: ../app1
+
+  convex_app_bar_example:
+    git:
+      url: git@github.com:glaubersp-flutter/app1.git
+      ref: main
+
+#  app2:
+#    path: ../app2
+
+  app2:
+    git:
+      url: git@github.com:glaubersp-flutter/app2.git
+      ref: main
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +68,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/app_list.yaml
+    - assets/logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
